fixing text alignment

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
 .text {
     font-size: .9rem;
     font-weight: 400;
-    max-width: 90%;
+    max-width: 100%;
     margin-bottom: 0.5rem;
 }
 
